--- a/advanced_info.html
+++ b/advanced_info.html
@@ -2,15 +2,15 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only" translate="">Close</span></button>
                 <h4 class="modal-title" id="myModalLabel">
                     <translate>POI information for developers</translate>
                 </h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only" translate="">Close</span></button>
             </div>
             <div class="modal-body" style="max-height:600px; overflow-y:auto">
-                <div ng-repeat="group in queryData.groups | orderBy : name">
+                <div ng-repeat="group in queryData.groups">
                     <table class="table">
-                        <tr ng-repeat="attribute in group.attributes | orderBy : name">
+                        <tr ng-repeat="attribute in group.attributes">
                             <td><b translate><a href="{{attribute.name}}" target="_blank">{{attribute.name}}</a></b></td> 
                             <td ng-show="attributeEditorMode(attribute)==2" ng-bind-html="attribute.value"></td>
                             <td ng-show="attributeEditorMode(attribute)==3"><a href="{{attribute.value}}" target="_blank">{{attribute.value}}</a></td>
@@ -27,10 +27,10 @@
                 </div>
             </div>
             <div class="modal-footer" id="stc-footer">
-                <button ng-repeat="group in queryData.groups | orderBy : name" type="button" class="btn btn-primary" ng-show="attributesHaveChanged(group.attributes)" ng-click="saveSpoiChanges(group.attributes)">
+                <button ng-repeat="group in queryData.groups" type="button" class="btn btn-primary" ng-show="attributesHaveChanged(group.attributes)" ng-click="saveSpoiChanges(group.attributes)">
                     <translate>Save changes</translate>
                 </button>
-                <button ng-repeat="group in queryData.groups | orderBy : name" type="button" class="btn btn-primary" ng-show="attributesHaveChanged(group.attributes)" ng-click="cancelSpoiChanges(group.attributes)">
+                <button ng-repeat="group in queryData.groups" type="button" class="btn btn-primary" ng-show="attributesHaveChanged(group.attributes)" ng-click="cancelSpoiChanges(group.attributes)">
                     <translate>Cancel</translate>
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal" translate="">Close</button>
