--- a/infopanel.html
+++ b/infopanel.html
@@ -1,22 +1,22 @@
-<div class="panel panel-default mainpanel">
+<div class="card mainpanel">
 
-      <div class="panel-heading"><span class="ng-scope"><translate>Information</translate>&nbsp;<i class="icon-comment"></i> </span>
+      <div class="card-header"><span class="ng-scope"><translate>Information</translate>&nbsp;<i class="icon-comment"></i> </span>
             <button type="button" class="close" ng-click="Core.closePanel(this)">
                 <span aria-hidden="true">×</span>
                 <span class="sr-only" translate=""><span class="ng-scope">Close</span></span>
             </button>
         </div>
-        <div class="panel-body">
+        <div class="card-body">
     
         <!-- Feature Name -->
-        <div class="panel-body" ng-repeat="group in queryData.groups | orderBy : name">
+        <div class="card-body" ng-repeat="group in queryData.groups | orderBy : name">
             <div class="hs-spoi-title" ng-repeat="attribute in group.attributes | filter: {name: 'http://purl.org/dc/elements/1.1/title'}">
                 <h3 class="hs-spoi-feature-info">{{makeHumanReadable(attribute)}}</h3>
                 <div class="hs-spoi-item-controls"><button type="button" class="btn btn-xs btn-default" ng-click="startEdit(attribute)"><i class="glyphicon glyphicon-edit"></i></button></div>          
                 <input class="form-control" ng-show="attribute.is_editing" ng-change="attribute.changed = true" ng-model="attribute.value"/>
                 <div>
-                    <button class="hs-spoi-point-to-trip btn btn-default" ng-click="addToTrip()" ng-disabled="attributesHaveChanged(group.attributes)">Add to trip</button>
-                    <button class="hs-spoi-point-to-trip btn btn-default" ng-click="toggleUploadPhoto()">Add photo</button>
+                    <button class="hs-spoi-point-to-trip btn btn-light btn-outline" ng-click="addToTrip()" ng-disabled="attributesHaveChanged(group.attributes)">Add to trip</button>
+                    <button class="hs-spoi-point-to-trip btn btn-light btn-outline" ng-click="toggleUploadPhoto()">Add photo</button>
                 </div>
             </div>
             <br/>
