--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Smart Points of Interest</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link href="<%= htmlWebpackPlugin.files.favicon %>" rel="icon">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet">
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
