--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>HS Layers</title>
+  <title>SPOI map</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 </head>
-<body >
-    <spoi-app-component></spoi-app-component>
+<body>
+  <spoi-app-component></spoi-app-component>
 </body>
 </html>
